<resources>
    <string name="app_name">E-Commerce</string>


    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <!--TODO Step 5: For the best practices string values in the string.xml file.-->
    <!--START-->
    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="terms_and_conditions">
        Terms and Conditions\n\n
        Welcome to %1$s!\n\n
        By using our services, you agree to the following terms and conditions:\n\n

        1. Account Information:\n
           - You are responsible for maintaining the confidentiality of your account information.\n
           - Notify us immediately of any unauthorized access to your account.\n\n

        2. Ordering and Payments:
           - Orders are subject to availability and acceptance.\n
           - Payment must be made in full at the time of purchase.\n\n

        3. Shipping and Delivery:\n\n
           - We strive to deliver orders in a timely manner.\n
           - Shipping costs and delivery times may vary.\n\n

        <!--        4. Returns and Exchanges:\n\n-->
        <!--           - Read our return policy carefully before initiating a return or exchange.\n-->
        <!--           - Returned items must be in their original condition.\n-->

</string>
    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm passsword</string>
    <string name="err_msg_enter_terms_conditions_check">Please accept the terms and conditions</string>
    <string name="register_successful">You have been successfully registered</string>
    <string name="password_mismatch">Password and confirm password mismatch</string>
    <string name="login_successful">Login Successful</string>
    <string name="please_wait">Please wait</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="et_hint_new_password">New Password</string>
    <string name="btn_submit">Submit</string>
    <string name="password_recovery_text">Password Recovery mail has been sent to you mail id.</string>
    <string name="reset_description">Enter your Email ID.\nRecovery mail will be sent to your mail.</string>
    <string name="complete_profile_title">Complete Profile</string>

    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="already_have_storage_permission">You already have the storage permission</string>
    <string name="storage_permission_granted">Storage permission has been granted</string>
    <string name="storage_permission_denied">Storage permission is denied</string>
    <string name="image_Selection_failed">Image selection failed!</string>
    <string name="err_msg_enter_mobile">Please enter mobile number</string>
    <string name="profile_update_successful">Profile updated successfully</string>
    <string name="please_upload_image">Please upload the image</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Bhajanpura, Delhi - 110053</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="logged_out_successful">Logged out successfully</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="action_add_product">Add Product</string>


    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price (Rs.)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>

    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>

    <string name="product_uploaded_success_message">Your product is uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="product_deleted_success_message">Product deleted successfully</string>
    <string name="err_getting_all_dashboard_products">Some issue occured while fetching all dashboard items</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="edit_product">Edit</string>
    <string name="you_can_now_edit_the_details">You can now edit the details !!</string>
    <string name="add_to_cart">Cart</string>
    <string name="added_to_cart_success">Items added to cart successfully</string>
    <string name="minus_sign">-</string>
    <string name="btn_go_to_cart">Go To Cart</string>
    <string name="add_lbl_to_cart">ADD TO CART</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="update_product">UPDATE PRODUCT</string>


    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_enter_full_name">Please enter the Full Name</string>
    <string name="err_msg_enter_address">Please enter the complete address</string>
    <string name="err_msg_enter_additional_note">Please enter the additional note for this address</string>
    <string name="err_msg_enter_phone_no">Please enter the phone number</string>
    <string name="err_msg_enter_zip_code">Please enter the Zip Code</string>
    <string name="address_added_success">Address added successfully</string>
    <string name="err_msg_enter_other_details">Other Details field must not be empty</string>
    <string name="address_added_failed">Failed to add the address</string>
    <string name="address_updated_success">Address updated successfully</string>
    <string name="address_deleted_success">Address deleted successfully</string>
    <string name="address_deleted_failed">Some issue occured while deleting the address</string>
    <string name="select_address">SELECT ADDRESS</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="swipe_left_to_delete">Swipe Left to delete</string>
    <string name="swipe_right_to_delete">Swipe Right to edit</string>
    <string name="quantity">Quantity:</string>
    <string name="orders_activity">Orders Activity</string>
    <string name="orders">ORDERS</string>
    <string name="checkout_this_new_project">Checkout this new project</string>


    <!--    <string name="title_my_cart">MY CART</string>-->
    <!--    <string name="no_cart_item_found">No item found in cart!</string>-->
    <!--    <string name="lbl_subtotal">Subtotal</string>-->
    <!--    <string name="lbl_shipping_charge">Shipping Charge</string>-->
    <!--    <string name="lbl_total_amount">Total Amount</string>-->
    <!--    <string name="btn_lbl_checkout">Checkout</string>-->
    <!--    <string name="action_cart">My Cart</string>-->
    <!--END-->

</resources>