<?xml version="1.0" encoding="utf-8"?>
<!--TODO Step 2: Design the settings screen layout-->
<!--START-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_header_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_image_height">

            <ImageView
                android:id="@+id/iv_header_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/auth_screens_background" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_settings_activity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="@dimen/toolbar_title_paddingStart"
                    android:paddingEnd="0dp"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:text="@string/action_settings"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_title_text_size" />

            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_user_image"
            android:layout_width="@dimen/profile_user_image_height"
            android:layout_height="@dimen/profile_user_image_width"
            android:layout_below="@id/fl_header_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_user_image_marginTop">


            <ImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/profile_user_photo_margin"
                android:layout_marginStart="@dimen/profile_user_photo_margin"
                android:layout_marginTop="@dimen/profile_user_photo_margin"
                android:layout_marginEnd="@dimen/profile_user_photo_margin"
                android:layout_marginBottom="@dimen/profile_user_photo_margin"
                android:background="@drawable/user_image_background"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/ic_user_placeholder__1_" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_header_bg"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/item_grey_border_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
            android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
            android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
            android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
            android:text="@string/lbl_edit"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_edit_label_textSize" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_user_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sf_pro_text_bold"
            android:layout_marginTop="@dimen/settings_name_marginTop"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/settings_name_textSize"
            android:text="Moksh Giri" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sf_pro_text_medium"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            android:textAllCaps="true"
            android:text="Male" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gender"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sf_pro_text_medium"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            android:text="mokshgiri@gmail.com" />

        <TextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sf_pro_text_medium"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            android:text="123456789" />

        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mobile_number"
            android:layout_margin="@dimen/settings_address_margin"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/settings_address_padding">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_lbl_addresses_margin"
                android:layout_weight="1"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@string/lbl_addresses"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/settings_lbl_addresses_textSize" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_background"
                android:padding="5dp"
                android:layout_gravity="center_vertical"
                >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addressBtn"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_vector_chevron_right"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackgroundBorderless"/>

            </FrameLayout>
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_address"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_pro_text_bold"
            android:layout_marginStart="@dimen/settings_button_marginStartEnd"
            android:layout_marginTop="@dimen/settings_button_marginTopBottom"
            android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
            android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize" />

    </RelativeLayout>
</ScrollView>
    <!--END-->